Added logic to stop game when other things are showing.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,7 @@
 <app-central-section (showScore)="updateAndShowScore($event)"
                      (gameEnd)="endGame($event)"
                      [gameRun]="gameRun"
+                     [gamePaused]="isGamePaused()"
                      [game]="game">
 
 </app-central-section>
