--- a/src/app/score/score.component.html
+++ b/src/app/score/score.component.html
@@ -7,5 +7,6 @@
   </div>
 <!--  <button class="button_white">SHARE SCORE</button>-->
 <!--  <div style="height: 20px;"></div>-->
-  <button id="button_medley_001" class="button_blue" (click)="closeTab.emit()">{{getCloseText()}}</button>
+  <button class="button_medley_001 button_blue" (click)="processContinueClick()">{{getCloseText()}}</button>
+  <button *ngIf="hasGameEnded()" class="button_medley_001 button_blue" (click)="closeTab.emit()">CLOSE</button>
 </div>
