Added option of closing score tab without restarting game.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,7 +38,8 @@
 <app-score *ngIf="showScore"
            [lastMove]="game.lastMove"
            [scoreHistory]="scoreHistory"
-           (closeTab)="closeScoreTabAndContinue()"></app-score>
+           (closeTab)="hideScoreView()"
+           (restartGame)="closeScoreTabAndRestart()"></app-score>
 
 <!--Info popup-->
 <div *ngIf="showInfo" id="info_background" (click)="hideInfoView();"></div>
