--- a/src/app/central-section/guess-bar/guess-bar.component.css
+++ b/src/app/central-section/guess-bar/guess-bar.component.css
@@ -66,19 +66,17 @@
   font-size: 2.5vh;
 }
 .guess_button_parent {
-  display: block;
+  display: flex;
   position: relative;
+  justify-content: space-around;
   width: 100%;
   height: 55%;
 }
-button.guess_button {
+button.control_button {
   display: block;
-  position: absolute;
-  left: 50%;
-  top: 50%;
+  /*position: absolute;*/
   width: 18%;
   height: 50%;
-  transform: translate(-50%,-50%);
   border: none;
   outline: none;
   cursor: pointer;
@@ -91,19 +89,24 @@ button.guess_button {
   line-height: 2.1em;
   color: white;
 }
-button.guess_button:hover {
+button.control_button:hover {
   box-shadow: 0px 0px 6px rgb(0,0,0,.5);
 }
 
-.guessing {
+.guess_button {
   opacity: 1;
   background-color: #2EAEF2;
   pointer-events: auto;
 }
 
-.skipping {
+button.inactive {
+  opacity: .5;
+  pointer-events: none;
+}
+
+.move_button {
   opacity: 1;
-  background-color: #59f53e;
+  background-color: #2EAEF2;
   pointer-events: auto;
 }
 
@@ -116,6 +119,6 @@ button.guess_button:hover {
   .guess {font-size: 16px; line-height: 28px; border-radius: 15px;}
   .guess_letter {font-size: 4.3vw;}
   .guess_button_parent {height: 90px;}
-  .button.guess_button {font-size: 16px; width: 99px; height: 45px; border-radius: 23px;}
-  .button.guess_button:hover {box-shadow: none;}
+  .button.control_button {font-size: 16px; width: 99px; height: 45px; border-radius: 23px;}
+  .button.control_button:hover {box-shadow: none;}
 }
