--- a/src/app/central-section/guess-bar/guess-bar.component.html
+++ b/src/app/central-section/guess-bar/guess-bar.component.html
@@ -20,8 +20,11 @@
   </div>
   <div class="guess_button_parent">
 
-    <button class="control_button move_button" (click)="this.navigateGame.emit(-1);">
+    <button class="control_button move_button" (click)="this.navigateGame.emit(-10);">
       &#9664;&#9664;
+    </button>
+    <button class="control_button move_button" (click)="this.navigateGame.emit(-1);">
+      &#9664;
     </button>
     <button *ngIf="!isReviewing"
             [ngClass]="{control_button: true, guess_button: true, inactive: guesses.length == 0}"
@@ -29,6 +32,9 @@
       GUESS
     </button>
     <button class="control_button move_button" (click)="this.navigateGame.emit(1);">
+      &#9654;
+    </button>
+    <button class="control_button move_button" (click)="this.navigateGame.emit(10);">
       &#9654;&#9654;
     </button>
   </div>
