--- a/src/app/score/score.component.html
+++ b/src/app/score/score.component.html
@@ -1,5 +1,5 @@
-<div id="score_summary" class="popup">
-  <div id="score_total_score"></div>
+<div class="popup score_summary">
+  <div class="score_total_score"></div>
   <div style="height: 20px;"></div>
   <div *ngFor="let score of scoreHistory; let i = index;">
     <h2>{{getScoreText(score, i)}}</h2>
@@ -8,5 +8,7 @@
 <!--  <button class="button_white">SHARE SCORE</button>-->
 <!--  <div style="height: 20px;"></div>-->
   <button class="button_medley_001 button_blue" (click)="processContinueClick()">{{getCloseText()}}</button>
+  <div style="height: 20px;"></div>
   <button *ngIf="hasGameEnded()" class="button_medley_001 button_blue" (click)="closeTab.emit()">CLOSE</button>
+  <div *ngIf="hasGameEnded()" style="height: 20px;"></div>
 </div>
