--- a/src/app/central-section/move-info/move-info.component.html
+++ b/src/app/central-section/move-info/move-info.component.html
@@ -24,6 +24,6 @@
   <!--Current score.-->
   <div *ngIf="moveNumber>=startingMoves" class="player_info score_parent">
     SCORE
-    <div class="total_score">{{score}}</div>
+    <div class="total_score" (click)="showScore.emit()">{{score}}</div>
   </div>
 </div>
