--- a/src/app/central-section/move-info/move-info.component.html
+++ b/src/app/central-section/move-info/move-info.component.html
@@ -8,13 +8,13 @@
   <!--Message displayed afterwards.-->
   <!--Player color and move number.-->
   <!-- Need to switch visibility to trigger appearance -->
-  <div *ngIf="!showLoading()&& !isGameEnd && isBlackTurn()" class="player_info player_parent">
+  <div *ngIf="showMove() && isBlackTurn()" class="player_info player_parent">
     <div class="stone_to_play" style="background-image: radial-gradient(#cccccc, #4d4d4d, #000000, #000000)"></div>
     Black to play
     <div class="vertical_bar"></div>
     <span class="number_of_moves">MOVE <span>{{moveNumber + 1}}</span></span>
   </div>
-  <div *ngIf="!showLoading()&& !isGameEnd && !isBlackTurn()" class="player_info player_parent">
+  <div *ngIf="showMove() && !isBlackTurn()" class="player_info player_parent">
     <div class="stone_to_play" style="background-image: radial-gradient(white, #e6e6e6, #cecece, #d2d2d2)"></div>
     White to play
     <div class="vertical_bar"></div>
