Made it possible to close popups with key events.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
 
 <!--Main screen-->
 <app-central-section (showScore)="updateAndShowScore($event)"
+                     (closePopups)="processPopupClosing()"
                      (reviewConcluded)="showReviewConcludedView()"
                      [gameRun]="gameRun"
                      [gamePaused]="isGamePaused()"
