--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -2,13 +2,13 @@
   <h2>TODAY'S GAME</h2>
   <div style="height: 18px;"></div>
   <div style="display: flex; flex-flow: row;">
-    <div style="flex: 0%; height: 10px"></div>
+    <div style="flex: 0; height: 10px"></div>
     <div id="players_name_parent" style="white-space: nowrap; width: auto;">
       <div class="stone_black_player"></div><div class="player_name"><b>{{blackPlayerName}}</b> {{blackPlayerRank}}</div>
       <br>
       <div class="stone_white_player"></div><div class="player_name"><b>{{whitePlayerName}}</b> {{whitePlayerRank}}</div>
     </div>
-    <div style="flex: 0%; height: 10px"></div>
+    <div style="flex: 0; height: 10px"></div>
   </div>
   <div style="height: 8px;"></div>
   <div class="player_name" style="display: block; font-size: 19px;">Played on <b>{{gameDate}}</b></div>
