Reformatted css to avoid duplicates.

--- a/src/app/central-section/guess-bar/guess-bar.component.html
+++ b/src/app/central-section/guess-bar/guess-bar.component.html
@@ -21,7 +21,7 @@
       </div>
     </div>
   </div>
-  <div class="guess_button_parent">
+  <div class="buttons_container">
 
     <button class="control_button move_button" (click)="this.navigateGame.emit(-10);">
       &#9664;&#9664;
