--- a/src/app/central-section/guess-bar/guess-bar.component.css
+++ b/src/app/central-section/guess-bar/guess-bar.component.css
@@ -28,14 +28,14 @@
   text-align: center;
   font-size: 4vh;
   color: white;
-  text-shadow: 0px 0px 4px black;
+  text-shadow: 0 0 4px black;
   line-height: 100%;
 }
 @keyframes animated_number_going_up_animation {
   0% {opacity: 0; top: 100%;}
-  50% {opacity: 1; top: 0%;}
-  70% {opacity: 1; top: 0%;}
-  100% {opacity: 0; top: 0%;}
+  50% {opacity: 1; top: 0;}
+  70% {opacity: 1; top: 0;}
+  100% {opacity: 0; top: 0;}
 }
 
 .guess_bar_parent {
@@ -61,17 +61,10 @@
   line-height: 1.7em;
 }
 
-
 .guess_letter {
   font-size: 2.5vh;
 }
-.guess_button_parent {
-  display: flex;
-  position: relative;
-  justify-content: space-around;
-  width: 100%;
-  height: 55%;
-}
+
 button.control_button {
   display: block;
   /*position: absolute;*/
@@ -90,7 +83,7 @@ button.control_button {
   color: white;
 }
 button.control_button:hover {
-  box-shadow: 0px 0px 6px rgb(0,0,0,.5);
+  box-shadow: 0 0 6px rgb(0,0,0,.5);
 }
 
 .guess_button {
