--- a/src/app/review-concluded/review-concluded.component.html
+++ b/src/app/review-concluded/review-concluded.component.html
@@ -2,5 +2,5 @@
   <div style="height: 20px;"></div>
     <h2>YOU HAVE REACHED YOUR LATEST CHECKPOINT.</h2>
   <div style="height: 20px;"></div>
-  <button class="button_medley_001 button_blue" (click)="closeTab.emit()">CONTINUE</button>
+  <button class="button_blue" (click)="closeTab.emit()">CONTINUE</button>
 </div>
