added some space around guess button -close #10 .

--- a/src/app/central-section/guess-bar/guess-bar.component.css
+++ b/src/app/central-section/guess-bar/guess-bar.component.css
@@ -90,6 +90,8 @@ button.control_button:hover {
   opacity: 1;
   background-color: #2EAEF2;
   pointer-events: auto;
+  margin-left: 2%;
+  margin-right: 2%;
 }
 
 button.inactive {
