Added space between buttons and point bars - close #11 .

--- a/src/app/central-section/guess-bar/guess-bar.component.html
+++ b/src/app/central-section/guess-bar/guess-bar.component.html
@@ -21,8 +21,8 @@
       </div>
     </div>
   </div>
+  <div style="height: 20px;"></div>
   <div class="buttons_container">
-
     <button class="control_button move_button" (click)="this.navigateGame.emit(-10);">
       &#9664;&#9664;
     </button>
