--- a/src/app/central-section/central-section.component.html
+++ b/src/app/central-section/central-section.component.html
@@ -14,6 +14,7 @@
     <app-board (addGuess)="addGuess($event)"
                (removeGuess)="removeGuess($event)"
                [moveNumber]="moveNumber"
+               [correctGuess]="correctGuess"
                [stonesInBoard]="getCurrentMoves()"
                [guesses]="guesses">
     </app-board>
