Fixed logo bar overlapping with board - close # 14

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <!--Logo-->
-<div id="logo_bar">
-  <div id="logo">
+<div class="logo_bar">
+  <div class="logo">
     Baduk<br>guessr
   </div>
 </div>
 
 <!--info button-->
-<button id="info_button" (click)="showInfoView();">i</button>
+<button class="info_button" (click)="showInfoView();">i</button>
 
 <!--Main screen-->
 <app-central-section (showScore)="updateAndShowScore($event)"
