--- a/src/app/central-section/move-info/move-info.component.html
+++ b/src/app/central-section/move-info/move-info.component.html
@@ -27,7 +27,7 @@
   </div>
 
   <!--Current score.-->
-  <div *ngIf="!showLoading()" class="player_info score_parent">
+  <div *ngIf="showMove()" class="player_info score_parent">
     SCORE
     <div class="total_score" (click)="showScore.emit()">{{score}}</div>
   </div>
