--- a/src/app/score/score.component.html
+++ b/src/app/score/score.component.html
@@ -11,6 +11,11 @@
     <button class="button_blue" (click)="closeTab.emit()">{{getCloseText()}}</button>
   </div>
   <div style="height: 20px;"></div>
-  <button *ngIf="hasGameEnded()" class="button_blue" (click)="restartGame.emit()">RESTART</button>
+  <div *ngIf="hasGameEnded()" class="buttons_container">
+    <button class="button_blue" (click)="restartGame.emit()">RESTART</button>
+    <button class="button_blue">
+      <a [href]="sgfFileUrl" class="normal_text" download="dailyBadukGuessr.sgf">Download SGF</a>
+    </button>
+  </div>
   <div *ngIf="hasGameEnded()" style="height: 20px;"></div>
 </div>
