Now not allowing to make guesses during review.  -close #22 .

--- a/src/app/central-section/board/board.component.html
+++ b/src/app/central-section/board/board.component.html
@@ -41,18 +41,20 @@
   </div>
 
   <!--Guesses-->
-  <div *ngFor="let guess of guesses; let i = index"
-       class="intersection letter_on_board"
-       [ngStyle]="{'top': getPos(guess.row)+'%', 'left': getPos(guess.column)+'%'}">
-    &nbsp;
-    <span *ngIf="!isHovering(guess) && guessUnresolved()">{{getGuessLetter(i)}}</span>
-    <span *ngIf="(guessUnresolved() && isHovering(guess)) || (!guessUnresolved() && !isCorrectGuess(i))">
-      <fa-icon [icon]="faX" [styles]="{'stroke': 'red', 'color': 'red'}"></fa-icon>
-    </span>
-    <span *ngIf="isCorrectGuess(i)">
-      <fa-icon [icon]="faCheck" [styles]="{'stroke': 'green', 'color': 'green'}"></fa-icon>
-    </span>
-    &nbsp;
+  <div *ngIf="!isReviewing">
+    <div *ngFor="let guess of guesses; let i = index"
+         class="intersection letter_on_board"
+         [ngStyle]="{'top': getPos(guess.row)+'%', 'left': getPos(guess.column)+'%'}">
+      &nbsp;
+      <span *ngIf="!isHovering(guess) && guessUnresolved()">{{getGuessLetter(i)}}</span>
+      <span *ngIf="(guessUnresolved() && isHovering(guess)) || (!guessUnresolved() && !isCorrectGuess(i))">
+        <fa-icon [icon]="faX" [styles]="{'stroke': 'red', 'color': 'red'}"></fa-icon>
+      </span>
+      <span *ngIf="isCorrectGuess(i)">
+        <fa-icon [icon]="faCheck" [styles]="{'stroke': 'green', 'color': 'green'}"></fa-icon>
+      </span>
+      &nbsp;
+    </div>
   </div>
 
   <!--All intersections in the board used for processing click.-->
