--- a/src/app/central-section/central-section.component.html
+++ b/src/app/central-section/central-section.component.html
@@ -16,6 +16,7 @@
                [moveNumber]="moveNumber"
                [correctGuess]="correctGuess"
                [stonesInBoard]="getCurrentMoves()"
+               [isReviewing]="isReviewing()"
                [guesses]="guesses">
     </app-board>
 
