--- a/src/app/central-section/guess-bar/guess-bar.component.html
+++ b/src/app/central-section/guess-bar/guess-bar.component.html
@@ -21,7 +21,7 @@
           </span>
           &nbsp;
         </b>
-        <span *ngIf="correctGuess===-1">{{points}}</span>
+        <span *ngIf="correctGuess===-1">{{points}}&nbsp;</span>
       </div>
     </div>
   </div>
