--- a/src/app/central-section/guess-bar/guess-bar.component.css
+++ b/src/app/central-section/guess-bar/guess-bar.component.css
@@ -53,16 +53,16 @@
 }
 
 .guess {
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
   position: relative;
   height: 100%;
-  vertical-align: center;
   border-radius: 2vh;
   transition: .3s ease;
 
   font-family: 'Secular One', sans-serif;
   font-size: 2vh;
-  text-align: center;
   color: white;
   /*line-height: 1.7em;*/
 }
